added no sub information

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -2,6 +2,8 @@
   "main": {
     "page": {
       "component": {
+        "buy": "Buy subscription",
+        "no-sub": "You don't have a subscription",
         "podpiska": "Subscription"
       }
     }
