--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -2,6 +2,8 @@
   "main": {
     "page": {
       "component": {
+        "buy": "Приобрести подписку",
+        "no-sub": "У вас нет подписки",
         "podpiska": "Подписка"
       }
     }
