added fetch error page

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -4,7 +4,9 @@
       "component": {
         "buy": "Buy subscription",
         "no-sub": "You don't have a subscription",
-        "podpiska": "Subscription"
+        "podpiska": "Subscription",
+        "error-connect": "Connection error",
+        "refresh": "Refresh"
       }
     }
   },
