--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -4,7 +4,9 @@
       "component": {
         "buy": "Приобрести подписку",
         "no-sub": "У вас нет подписки",
-        "podpiska": "Подписка"
+        "podpiska": "Подписка",
+        "error-connect": "Ошибка подключения",
+        "refresh": "Обновить"
       }
     }
   },
