feat: hide unsupported apps when CRYPTO_LINK is enabled
When CRYPTO_LINK is enabled, applications that don't support encrypted links
will now be filtered out from the connection instructions. Added an error
message to notify users about compatibility issues.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -17,7 +17,10 @@
       "connect-and-use": "Connect and use",
       "installation": "Installation",
       "select-device": "Select device",
-      "pc": "PC"
+      "pc": "PC",
+      "no-data-for-cryptolink": "No configuration data for cryptolinks",
+      "no-data-for-app": "No configuration available for this device type"
+
     },
     "ios": {
       "widget": {
