--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -17,7 +17,9 @@
       "connect-and-use": "Подключите и используйте",
       "installation": "Установка",
       "select-device": "Выберите устройство",
-      "pc": "ПК"
+      "pc": "ПК",
+      "no-data-for-cryptolink": "Нет конфигурации для приложений поддерживающих криптоссылки",
+      "no-data-for-app": "Нет конфигурации для данного типа устройств"
     },
     "ios": {
       "widget": {
