refactor: remove debug log and improve expiration text localization

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -63,7 +63,8 @@
     "util": {
       "expires-in": "Expires {expiration}",
       "expired": "Expired {expiration} ago",
-      "unknown": "Unknown"
+      "unknown": "Unknown",
+      "infinity": "Valid until: ∞"
     }
   }
 }
